# napihandler

./: .gitignore  Dockerfile  Dockerfile.build_and_test  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-and-test.yml  build-test-and-release.yml  mirror-to-gitlab.yml  release.yml
docs/: index.html  style.css
src/: napihandler.py
test/: test_napihandler.py
