[project]
name = "napihandler"
version = "v0.0.6"

[tool.pytest.ini_options]
markers = [
    "integration: tests that require network access to napiprojekt.pl",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 88

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]
